--- a/index.html
+++ b/index.html
@@ -87,17 +87,16 @@
         <div class="projects_container carousel">
           <div class="project">
             <a
-                href="https://pethealthcasj.com.br/"
+                href="https://cleversonasj.github.io/donatella_memoryGame/"
                 target="_blank"
-                ><div class="img__project img_petHealth"></div>
+                ><div class="img__project img_gameDonatella"></div>
             <div class="project_text">
               <h2>Sobre</h2>
               <p>
-                Projeto de cadastro de clientes, uso de uma API para buscar endereços. Confirmação de dados cadastrados.
-                Foi utilizado POO na criação da classe Usuário. Projeto responsivo.
+                Projeto onde eu utilizei a minha Frenchie como inspiração! É um projeto do Bootcamp da TQI na plataforma da Digital Innovation One Inc.
               </p>
               <h2>Tecnologias</h2>
-              <p>HTML, CSS, JavaScript, PHP</p>
+              <p>HTML, CSS e JavaScript</p>
             </div>
             </a>
           </div>
@@ -175,7 +174,7 @@
         <div class="techs">
           <div class="tech-header">
             <h2>Tecnologias</h2>
-            <p>Essas são as tecnologias que eu utilizo, todas elas foram utilizadas em pelo menos um dos projetos acima.</p>
+            <p>Essas são as tecnologias que eu utilizo:</p>
           </div>
 
           <div class="tech-box">
