--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 nome<span class="pink">:</span
                 ><span class="yellow"> 'Cleverson Junior'</span>,<br />
                 profissao<span class="pink">:</span>
-                <span class="yellow">'Frontend Developer'</span>,<br />
+                <span class="yellow">'Front-end Developer'</span>,<br />
                 descricao<span class="pink">:</span>
                 <span class="yellow"
-                  >'Hello, World! Sou estudante do 3° Período do curso de
+                  >'Hello, World! Sou estudante do 4° Período do curso de
                   Sistemas de Informação. Com foco em me tornar um Desenvolvedor
                   Full Stack, decidi separar este processo em etapas e escolhi o
                   Front-end para iniciar. Atualmente tenho conhecimentos de
