--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap"
       rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./fontawesome/css/all.css" />
-    <link rel="stylesheet" href="./css/slick.css" />
-    <link rel="stylesheet" href="./css/slick-theme.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    >
+    <link rel="stylesheet" href="./fontawesome/css/all.css" >
+    <link rel="stylesheet" href="./css/slick.css" >
+    <link rel="stylesheet" href="./css/slick-theme.css" >
+    <link rel="stylesheet" href="./css/style.css" >
     <title>.: Cleversonasj | Dev :.</title>
   </head>
   <body>
@@ -46,11 +46,11 @@
             <div class="about">
               <p>
                 <span class="pink">let</span> sobreMim =
-                <span class="yellow2">{</span><br />
+                <span class="yellow2">{</span><br>
                 nome<span class="pink">:</span
-                ><span class="yellow"> 'Cleverson Junior'</span>,<br />
+                ><span class="yellow"> 'Cleverson Junior'</span>,<br>
                 profissao<span class="pink">:</span>
-                <span class="yellow">'Front-end Developer'</span>,<br />
+                <span class="yellow">'Front-end Developer'</span>,<br>
                 descricao<span class="pink">:</span>
                 <span class="yellow"
                   >'Hello, World! Sou estudante do 4° Período do curso de
@@ -63,7 +63,7 @@
                   e POO (Programação Orientada a Objetos). Na faculdade utilizo
                   as linguagens: C e Java. Qualquer dúvida estou à disposição,
                   será um prazer falar com você!'</span
-                ><br />
+                ><br>
                 <span class="yellow2">}</span>
               </p>
             </div>
@@ -179,30 +179,30 @@
 
           <div class="tech-box">
             <div class="tech html">
-              <img src="./images/html-5.png" alt="HTML" />
+              <img src="./images/html-5.png" alt="HTML" >
             </div>
 
             <div class="tech html">
-              <img src="./images/css-3.png" alt="CSS" />
+              <img src="./images/css-3.png" alt="CSS" >
             </div>
 
             <div class="tech html">
-              <img src="./images/js.png" alt="JavaScript" />
+              <img src="./images/js.png" alt="JavaScript" >
             </div>
 
             <div class="tech html">
-              <img src="./images/jquery-icon.png" alt="JQuery" />
+              <img src="./images/jquery-icon.png" alt="JQuery" >
             </div>
 
             <div class="tech html">
-              <img src="./images/php.png" alt="PHP" />
+              <img src="./images/php.png" alt="PHP" >
             </div>
           </div>
         </div>
       </section>
     <a href="https://wa.me/5534992664009" target="_blank"
       ><img class="whatsapp" src="./images/whatsapp.png"
-    /></a>
+    ></a>
     <footer>
       <h4>All rights reserved | CASJ 2022</h4>
     </footer>
