--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <div>
               <h5>Front-end Developer</h5>
             </div>
-            <br />
-            <br />
+            <br >
+            <br >
             <div class="about">
               <p>
                 <span class="pink">let</span> sobreMim =
@@ -76,8 +76,8 @@
             />
           </div>
         </div>
+        </section>
       </main>
-      </section>
       <section class="projects_section">
         <div class="my_projects">
           <h2>Projetos</h2>
@@ -202,7 +202,7 @@
       </section>
     <a href="https://wa.me/5534992664009" target="_blank"
       ><img class="whatsapp" src="./images/whatsapp.png"
-    ></a>
+    alt="WhatsApp"></a>
     <footer>
       <h4>All rights reserved | CASJ 2022</h4>
     </footer>
