--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap"
-      rel="stylesheet"
-    >
-    <link rel="stylesheet" href="./fontawesome/css/all.css" >
-    <link rel="stylesheet" href="./css/slick.css" >
-    <link rel="stylesheet" href="./css/slick-theme.css" >
-    <link rel="stylesheet" href="./css/style.css" >
+      rel="stylesheet">
+    <link rel="stylesheet" href="./fontawesome/css/all.css">
+    <link rel="stylesheet" href="./css/slick.css">
+    <link rel="stylesheet" href="./css/slick-theme.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>.: Cleversonasj | Dev :.</title>
   </head>
   <body>
@@ -25,12 +24,27 @@
           <div class="line3"></div>
         </div>
         <ul class="nav-list">
-          <li><a href="mailto:clvsjr@hotmail.com" target="_blank"><i class="fa-solid fa-envelope-open-text"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/cleverson-junior-7749b2b7/" target="_blank" ><i class="fa-brands fa-linkedin"></i></a></li>
-          <li><a href="https://wa.me/5534992664009" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></li>
+          <li>
+            <a href="mailto:clvsjr@hotmail.com" target="_blank">
+              <i class="fa-solid fa-envelope-open-text"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/cleverson-junior-7749b2b7/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://wa.me/5534992664009" target="_blank">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+          </li>
         </ul>
       </nav>
-  </header>
+    </header>
     <main>
       <section>
         <div class="container">
@@ -41,19 +55,28 @@
             <div>
               <h5>Front-end Developer</h5>
             </div>
-            <br >
-            <br >
+            <br>
+            <br>
             <div class="about">
               <p>
-                <span class="pink">let</span> sobreMim =
-                <span class="yellow2">{</span><br>
-                nome<span class="pink">:</span
-                ><span class="yellow"> 'Cleverson Junior'</span>,<br>
-                profissao<span class="pink">:</span>
-                <span class="yellow">'Front-end Developer'</span>,<br>
-                descricao<span class="pink">:</span>
-                <span class="yellow"
-                  >'Hello, World! Sou estudante do 4° Período do curso de
+                <span class="pink">let</span>
+                sobreMim =
+                <span class="yellow2">{</span>
+                <br>
+                nome
+                <span class="pink">:</span>
+                <span class="yellow">'Cleverson Junior'</span>
+                ,
+                <br>
+                profissao
+                <span class="pink">:</span>
+                <span class="yellow">'Front-end Developer'</span>
+                ,
+                <br>
+                descricao
+                <span class="pink">:</span>
+                <span class="yellow">
+                  'Hello, World! Sou estudante do 4° Período do curso de
                   Sistemas de Informação. Com foco em me tornar um Desenvolvedor
                   Full Stack, decidi separar este processo em etapas e escolhi o
                   Front-end para iniciar. Atualmente tenho conhecimentos de
@@ -62,8 +85,9 @@
                   Hub. Tenho conhecimentos de Algoritmos, Lógica de Programação
                   e POO (Programação Orientada a Objetos). Na faculdade utilizo
                   as linguagens: C e Java. Qualquer dúvida estou à disposição,
-                  será um prazer falar com você!'</span
-                ><br>
+                  será um prazer falar com você!'
+                </span>
+                <br>
                 <span class="yellow2">}</span>
               </p>
             </div>
@@ -73,56 +97,60 @@
               class="image_main"
               src="./images/dev_astronaut.png"
               alt="Developer"
-            />
+            >
           </div>
         </div>
-        </section>
-      </main>
-      <section class="projects_section">
-        <div class="my_projects">
-          <h2>Projetos</h2>
-          <p>Aqui você poderá ver alguns projetos que criei.</p>
-          <img src="./images/projetc.jpg" alt="Projetos" />
-        </div>
-        <div class="projects_container carousel">
-          <div class="project">
-            <a
-                href="https://cleversonasj.github.io/donatella_memoryGame/"
-                target="_blank"
-                ><div class="img__project img_gameDonatella"></div>
+      </section>
+    </main>
+    <section class="projects_section">
+      <div class="my_projects">
+        <h2>Projetos</h2>
+        <p>Aqui você poderá ver alguns projetos que criei.</p>
+        <img src="./images/projetc.jpg" alt="Projetos" />
+      </div>
+      <div class="projects_container carousel">
+        <div class="project">
+          <a
+            href="https://cleversonasj.github.io/donatella_memoryGame/"
+            target="_blank"
+          >
+            <div class="img__project img_gameDonatella"></div>
             <div class="project_text">
               <h2>Sobre</h2>
               <p>
-                Projeto onde eu utilizei a minha Frenchie como inspiração! É um projeto do Bootcamp da TQI na plataforma da Digital Innovation One Inc.
+                Projeto onde eu utilizei a minha Frenchie como inspiração! É um
+                projeto do Bootcamp da TQI na plataforma da Digital Innovation
+                One Inc.
               </p>
               <h2>Tecnologias</h2>
               <p>HTML, CSS e JavaScript</p>
             </div>
-            </a>
-          </div>
-          <div class="project">
-            <a
-                href="https://cleversonasj.github.io/clone-netflix/"
-                target="_blank"
-                ><div class="img__project img_netflixClone"></div>
+          </a>
+        </div>
+        <div class="project">
+          <a
+            href="https://cleversonasj.github.io/clone-netflix/"
+            target="_blank"
+          >
+            <div class="img__project img_netflixClone"></div>
             <div class="project_text">
               <h2>Sobre</h2>
               <p>
                 Projeto proposto no Bootcamp da DIO, mas com alguns
-                diferenciais.
-                É feito o direcionamento para o YouTube para poder assistir ao
-                trailer do filme escolhido. Página responsiva.
+                diferenciais. É feito o direcionamento para o YouTube para poder
+                assistir ao trailer do filme escolhido. Página responsiva.
               </p>
               <h2>Tecnologias</h2>
               <p>HTML, CSS, JavaScript e JQuery</p>
             </div>
-            </a>
-          </div>
-          <div class="project">
-            <a
-                href="https://cleversonasj.github.io/churrascometro/"
-                target="_blank"
-                ><div class="img__project img_churrascometro"></div>
+          </a>
+        </div>
+        <div class="project">
+          <a
+            href="https://cleversonasj.github.io/churrascometro/"
+            target="_blank"
+          >
+            <div class="img__project img_churrascometro"></div>
             <div class="project_text">
               <h2>Sobre</h2>
               <p>
@@ -133,76 +161,77 @@
               <h2>Tecnologias</h2>
               <p>HTML, CSS e JavaScript</p>
             </div>
-            </a>
-          </div>
-          <div class="project">
-            <a
-                href="https://cleversonasj.github.io/eventoDoAno/"
-                target="_blank"
-                ><div class="img__project img_projetoAno"></div>
+          </a>
+        </div>
+        <div class="project">
+          <a href="https://cleversonasj.github.io/eventoDoAno/" target="_blank">
+            <div class="img__project img_projetoAno"></div>
             <div class="project_text">
               <h2>Sobre</h2>
               <p>
                 Mais um proposta do curso Programador BR porém assim como o
-                projeto anterior, foi feito diversas modificações no
-                projeto. Página responsiva.
-              </p>
-              <h2>Tecnologias</h2>
-              <p>HTML, CSS e JavaScript</p>
-            </div>
-            </a>
-          </div>
-          <div class="project">
-            <a
-                href="https://cleversonasj.github.io/cracha_virtual/"
-                target="_blank"
-                ><div class="img__project img_crachaVirtual"></div>
-            <div class="project_text">
-              <h2>Sobre</h2>
-              <p>
-                Crachá criado no NLW Heat. Fiz algumas alterações de nos Ícones das Redes Sociais, deixando diferente da proposta.
+                projeto anterior, foi feito diversas modificações no projeto.
                 Página responsiva.
               </p>
               <h2>Tecnologias</h2>
               <p>HTML, CSS e JavaScript</p>
             </div>
-            </a>
+          </a>
+        </div>
+        <div class="project">
+          <a
+            href="https://cleversonasj.github.io/cracha_virtual/"
+            target="_blank"
+          >
+            <div class="img__project img_crachaVirtual"></div>
+            <div class="project_text">
+              <h2>Sobre</h2>
+              <p>
+                Crachá criado no NLW Heat. Fiz algumas alterações de nos Ícones
+                das Redes Sociais, deixando diferente da proposta. Página
+                responsiva.
+              </p>
+              <h2>Tecnologias</h2>
+              <p>HTML, CSS e JavaScript</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="techs">
+        <div class="tech-header">
+          <h2>Tecnologias</h2>
+          <p>Essas são as tecnologias que eu utilizo:</p>
+        </div>
+
+        <div class="tech-box">
+          <div class="tech html">
+            <img src="./images/html-5.png" alt="HTML">
+          </div>
+
+          <div class="tech html">
+            <img src="./images/css-3.png" alt="CSS">
+          </div>
+
+          <div class="tech html">
+            <img src="./images/js.png" alt="JavaScript">
+          </div>
+
+          <div class="tech html">
+            <img src="./images/jquery-icon.png" alt="JQuery">
+          </div>
+
+          <div class="tech html">
+            <img src="./images/php.png" alt="PHP">
           </div>
         </div>
-      </section>
-      <section>
-        <div class="techs">
-          <div class="tech-header">
-            <h2>Tecnologias</h2>
-            <p>Essas são as tecnologias que eu utilizo:</p>
-          </div>
+      </div>
+    </section>
+    <a href="https://wa.me/5534992664009" target="_blank">
+      <img class="whatsapp" src="./images/whatsapp.png" alt="WhatsApp">
+    </a>
 
-          <div class="tech-box">
-            <div class="tech html">
-              <img src="./images/html-5.png" alt="HTML" >
-            </div>
-
-            <div class="tech html">
-              <img src="./images/css-3.png" alt="CSS" >
-            </div>
-
-            <div class="tech html">
-              <img src="./images/js.png" alt="JavaScript" >
-            </div>
-
-            <div class="tech html">
-              <img src="./images/jquery-icon.png" alt="JQuery" >
-            </div>
-
-            <div class="tech html">
-              <img src="./images/php.png" alt="PHP" >
-            </div>
-          </div>
-        </div>
-      </section>
-    <a href="https://wa.me/5534992664009" target="_blank"
-      ><img class="whatsapp" src="./images/whatsapp.png"
-    alt="WhatsApp"></a>
     <footer>
       <h4>All rights reserved | CASJ 2022</h4>
     </footer>
