--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="my_projects">
         <h2>Projetos</h2>
         <p>Aqui você poderá ver alguns projetos que criei.</p>
-        <img src="./images/projetc.jpg" alt="Projetos" />
+        <img src="./images/projetc.jpg" alt="Projetos">
       </div>
       <div class="projects_container carousel">
         <div class="project">
