--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
       <div class="second-box">
         <img
-        src="images/profile.png"
+        src="images/profile.jpg"
         alt="Developer"
         >
       </div>
@@ -70,7 +70,7 @@
             href="https://cleversonasj.github.io/donatella_memoryGame/"
             target="_blank"
           >
-          <img src="images/gameDonatella.png" alt="Jogo da Donatella" width="400">
+          <img src="images/gameDonatella.jpg" alt="Jogo da Donatella" width="400">
           <h3>Sobre</h3>
           <p>Projeto onde eu utilizei a minha Frenchie como inspiração! É um projeto do Bootcamp da TQI na plataforma da Digital Innovation One Inc.</p>
           <h3>Tecnologias</h3>
@@ -82,7 +82,7 @@
             href="https://cleversonasj.github.io/clone-netflix/"
             target="_blank"
           >
-          <img src="images/netflix-clone.png" alt="Clone da Netflix" width="400">
+          <img src="images/netflix-clone.jpg" alt="Clone da Netflix" width="400">
           <h3>Sobre</h3>
           <p>
             Projeto proposto no Bootcamp da DIO, mas com alguns
@@ -98,7 +98,7 @@
             href="https://cleversonasj.github.io/churrascometro/"
             target="_blank"
           >
-          <img src="images/churrascometro.png" alt="Churrascometro" width="400">
+          <img src="images/churrascometro.jpg" alt="Churrascometro" width="400">
           <h3>Sobre</h3>
           <p>
             Projeto proposto no curso Programador BR. É um projeto para
@@ -114,7 +114,7 @@
             href="https://cleversonasj.github.io/eventoDoAno/"
             target="_blank"
           >
-          <img src="images/eventoAno.png" alt="Evento do Ano" width="400">
+          <img src="images/eventoAno.jpg" alt="Evento do Ano" width="400">
           <h3>Sobre</h3>
           <p>
             Mais um proposta do curso Programador BR porém assim como o
