--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           href="https://wa.me/5534992664009"
           target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
         </li>
-        <li>
+        <li class="myProjects">
           <a
           href="#myProjects"><i class="fa-solid fa-file"></i></a>
         </li>
