--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h4>Front-end Developer</h4>
         <p>Hello, World! Sou estudante de Sistemas de Informação na Universidade Federal de Uberlândia. Sempre achei incrível como um simples arquivo <abbr title="HyperText Markup Language">HTML</abbr> em branco poderia se tornar um arquivo maravilhoso com um pouco de código e por esse motivo escolhi ser um Desenvolvedor Front-end. Atualmente tenho conhecimentos em <abbr title="HyperText Markup Language">HTML</abbr>, <abbr title="Cascading Style Sheets">CSS</abbr>, <abbr title="JavaScript">JS</abbr>, Angular e estou aprendendo React JS.</p>
         <br>
-        <p>Tenho certificados dos cursos: Programador BR, Udemy, Programming Hub e Gama Academy. Na faculdade concluí as matérias de Algoritmos, Lógica de Programação e POO (Programação Orientada a Objetos), Estrutura de Dados e hoje estou aprendendo Programação Para Internet que é uma matéria 100% prática e Banco de Dados. Além das tecnologias mencionadas acima que utilizo na parte de Front-end, eu tenho conhecimento básico em Linguagem C e Java. Qualquer dúvida estou à disposição, será um prazer falar com você!
+        <p>Tenho certificados dos cursos: Programador BR, Udemy, Programming Hub e Gama Academy. Na faculdade concluí as matérias de Algoritmos, Lógica de Programação e POO (Programação Orientada a Objetos), Estrutura de Dados e hoje estou aprendendo Programação Para Internet que é uma matéria 100% prática e Banco de Dados. Além das tecnologias mencionadas acima que utilizo na parte de Front-end, eu tenho conhecimento básico em Linguagem C, PHP e Java. Qualquer dúvida estou à disposição, será um prazer falar com você!
         </p>
       </section>
       <div class="second-box">
