--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </a>
     <hr>
     <footer>
-      <h4>All rights reserved | CASJ 2022</h4>
+      <h4>Copyright 2022 © CASJ - Todos os direitos reservados</h4>
     </footer>
     <script src="./scripts/jquery-1.11.0.min.js"></script>
     <script src="./scripts/jquery-migrate-1.2.1.min.js"></script>
