--- a/index.html
+++ b/index.html
@@ -68,18 +68,6 @@
       <div class="projects_box carousel">
         <div class="project">
           <a
-            href="https://cleversonasj.github.io/donatella_memoryGame/"
-            target="_blank"
-          >
-          <img src="images/gameDonatella.jpg" alt="Jogo da Donatella" width="400">
-          <h3>Sobre</h3>
-          <p>Projeto onde eu utilizei a minha Frenchie como inspiração! É um projeto do Bootcamp da TQI na plataforma da Digital Innovation One Inc.</p>
-          <h3>Tecnologias</h3>
-          <p>HTML, CSS e JavaScript</p>
-          </a>
-        </div>
-        <div class="project">
-          <a
             href="https://cleversonasj.github.io/clone-netflix/"
             target="_blank"
           >
@@ -128,6 +116,18 @@
         </div>
         <div class="project">
           <a
+            href="https://cleversonasj.github.io/donatella_memoryGame/"
+            target="_blank"
+          >
+          <img src="images/gameDonatella.jpg" alt="Jogo da Donatella" width="400">
+          <h3>Sobre</h3>
+          <p>Projeto onde eu utilizei a minha Frenchie como inspiração! É um projeto do Bootcamp da TQI na plataforma da Digital Innovation One Inc.</p>
+          <h3>Tecnologias</h3>
+          <p>HTML, CSS e JavaScript</p>
+          </a>
+        </div>
+        <div class="project">
+          <a
             href="https://cleversonasj.github.io/cracha_virtual/"
             target="_blank"
           >
@@ -138,6 +138,18 @@
             das Redes Sociais, deixando diferente da proposta. Página
             responsiva.
           </p>
+          <h3>Tecnologias</h3>
+          <p>HTML, CSS e JavaScript</p>
+          </a>
+        </div>
+        <div class="project">
+          <a
+            href="https://cleversonasj.github.io/pokedex_johto_included/"
+            target="_blank"
+          >
+          <img src="images/pokedex.png" alt="Pokedex" width="400">
+          <h3>Sobre</h3>
+          <p>Projeto criado para praticar o consumo de uma API. Neste projeto foi feito o uso da PokeApi e foi apresentado a listagem dos primeiros 251 Pokemons.</p>
           <h3>Tecnologias</h3>
           <p>HTML, CSS e JavaScript</p>
           </a>
