--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Portfólio do Cleverson Junior (Front-end Developer)">
-  <meta property="og:image" content="" id="metaImg">
+  <meta name="image" content="" id="metaImg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -89,13 +89,17 @@
     <img class="top" src="images/top.png" alt="Top Image" width="50" height="50">
   </a>
   <footer id="contact">
-    <address>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15096.91264933383!2d-48.25496472099133!3d-18.92129239652862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4501f87c35ef3%3A0xb065080879f5f58b!2sSanta%20M%C3%B4nica%2C%20Uberl%C3%A2ndia%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1668892129467!5m2!1spt-BR!2sbr"
-        width="700" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <span>Telefone: <a href="https://wa.me/5534992664009" target="_blank">&#40;34&#41; 99266-4009</a></span><br>
-      <span>E-mail: <a href="mailto:clvsjr@hotmail.com">clvsjr@hotmail.com</a></span>
-    </address>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15096.91264933383!2d-48.25496472099133!3d-18.92129239652862!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94a4501f87c35ef3%3A0xb065080879f5f58b!2sSanta%20M%C3%B4nica%2C%20Uberl%C3%A2ndia%20-%20MG!5e0!3m2!1spt-BR!2sbr!4v1668892129467!5m2!1spt-BR!2sbr"
+      width="700" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    <a href="tel:034-99266-4009"><img src="images/telephone-call.png" alt="Telefone" title="(34) 99266-4009" width="40" height="40"></a>
+    <a href="mailto:clvsjr@hotmail.com"><img src="images/email.png" alt="E-mail" title="clvsjr@hotmail.com"
+        width="40px" height="40px"></a>
+    <a href="https://www.linkedin.com/in/cleversonasj/" target="_blank"><img src="images/linkedin.png" alt="LinkedIn"
+        width="40px" height="40px"></a>
+    <a href="https://github.com/cleversonasj" target="_blank"><img src="images/github.png" alt="GitHub" width="40px"
+        height="40px"></a>
     <h4>Copyright 2022 © CASJ - Todos os direitos reservados</h4>
   </footer>
   <script src="./scripts/script.js"></script>
